--- a/css/style.css
+++ b/css/style.css
@@ -28,17 +28,17 @@ body{
 	padding: 0;
 	margin: 0;
 }
-.nav li {
+.my-nav li {
 	position: relative;
 	display: inline;
 	padding: 20px;
 }
-.nav a {
+.my-nav a {
 	text-decoration: none;
 	font-size: 150%;
 	color: #00336d;
 }
-.nav a:hover {
+.my-nav a:hover {
 		text-decoration: none;
 		color: #f0f0f0;
 }
@@ -64,4 +64,21 @@ a:hover {
 p {
 	color: #4d4d4d;
 }
-
+img {
+	width: 100%;
+	height: auto;
+}
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { /* WebKit browsers */
+    color:    #4d4d4d;
+}
+input:-moz-placeholder  textarea:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    #4d4d4d;
+   opacity:  1;
+}
+input::-moz-placeholder textarea::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    #4d4d4d;
+   opacity:  1;
+}
+input:-ms-input-placeholder { /* Internet Explorer 10+ */
+   color:    #4d4d4d;
+}
