--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
 	font-family: 'Poppins', sans-serif;
-	font-size: 100%;
+	font-size: 14px;
 }
 
 .nav {
@@ -8,17 +8,104 @@ body{
 	padding: 0;
 	margin: 0;
 }
+
+*[class^="prlx"] {
+  position: absolute;
+  width: 100%;
+  height: 300%;
+  top:0;
+  left:0;
+  z-index: -1;
+}
+
+.section-one, .section-two, .section-three, .section-four{
+	width: 100%; min-height: 500px;
+	position: relative;
+	overflow: hidden;
+	padding: 30px;
+}
+
+.prlx-1 {
+	background: url('../img/space1.jpeg'); 
+}
+
+.prlx-2 {
+	background-color: #4d464f;
+}
+
+.section-one h2 { 
+	font-size: 55px;
+	color: white;
+	position: absolute;
+	bottom: 100px;
+	left: 200px;
+	padding:10px;
+	background-color: #232323;
+}
+
+.top-social {
+	position: absolute;
+	bottom: 175px;
+	left: 500px;
+	padding: 20px;
+}
+
+span.projects {
+	background-color: #FFFFFF;
+	padding-right: 10px;
+	padding-left: 10px;
+}
+
+span.skills-category {
+	font-style: italic;
+	font-size: 16px;
+	color: #734747;
+}
+
 a {
  	text-decoration: none;
- 	color: #00336d;
+ 	color: #593231;
+ 	font-size: 16px;
 }
+
 a:hover {
 	text-decoration: underline;
-	color: #00336d;
+	color: #4d464f;
 }
+
 p {
 	color: #4d4d4d;
 }
+
+h2 {
+	text-transform: uppercase;
+	padding-top: 15px;
+	padding-bottom: 25px;
+	font-size: 45px;
+}
+
+span.skills {
+	text-transform: uppercase;
+	background-color: #232323;
+	color: #FFFFFF;
+	padding-right: 5px;
+	padding-left: 5px;
+}
+
+.skills {
+	border: 3px solid #000000;
+	width: 300px;
+}
+
+.skills h4 {
+	padding-top: 10px;
+	padding-bottom: 20px;
+}
+
+.row {
+	padding: 25px;
+}
+
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { /* WebKit browsers */
     color:    #4d4d4d;
 }
