--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,119 @@ body{
 	font-size: 14px;
 }
 
-.nav {
-	list-style: none;
-	padding: 0;
+.container-fluid {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+nav {
+	background: #fff;
+	clear: both;
+	font-size: 19px;
+	font-weight: 300;
+	line-height: 1;
 	margin: 0;
+	padding: 15px 0;
+	padding-left: 30px;
+	width: 100%;
+	position: fixed;
+	z-index: 1000;
+}
+
+nav ul {
+	padding: 0;
+	list-style-type: none;
+}
+
+nav .menu-item {
+	display: inline-block;
+	text-align: left;
+	padding-right: 20px;
+	padding-left: 15px;
+}
+
+.responsive-nav-icon::before,
+.responsive-nav-close::before {
+    color: #4d464f;
+    content: "\f0c9";
+    font-family: FontAwesome;
+    font-size: 22px;
+    position: relative;
+}
+
+.responsive-nav-close::before {
+    color: #4d464f;
+    content: "\f00d";
+    font-size: 18px;
+}
+
+.responsive-nav-icon {
+	background: #fff;
+	line-height: normal;
+	padding: 5px 8px 4px;
+	top: 5%; left: 5%;
+}
+
+.responsive-nav-icon:hover,
+.responsive-nav-close:hover {
+	opacity: .7;
+}
+
+.responsive-nav-close {
+	top: 10px; right: 10px;
+}
+
+.responsive-nav-icon,
+.responsive-nav-close {
+    cursor: pointer;
+    display: none;
+}
+
+#overlay {
+    background: 0 0 rgba(0, 0, 0, 0.8);
+    display: none;
+    height: 100%;
+    position: fixed;
+    top: 0; left: 0;
+    -moz-transition: all 0.2s linear 0s;
+    -webkit-transition: all 0.2s linear 0s;
+    -ms-transition: all 0.2s linear 0s;
+    transition: all 0.2s linear 0s;
+    width: 100%;
+    z-index: 90;
+}
+
+@media only screen and (max-width: 960px) {
+	.responsive-nav-icon,
+	.responsive-nav-close {
+	    display: block;
+	    position: absolute;
+	    z-index: 1;
+	}
+
+	nav {
+	    height: 100%;
+	    padding: 20px;
+	    position: fixed;
+	    top: 0; left: -400px;
+	    -moz-transition: all 0.2s linear 0s;
+	    -webkit-transition: all 0.2s linear 0s;
+	    -ms-transition: all 0.2s linear 0s;
+	    transition: all 0.2s linear 0s;
+	    width: 0;
+	}
+	
+	nav.slide-in {
+	    left: 0;
+	    overflow-y: scroll;
+	    width: 280px;
+	    z-index: 100;
+	}
+	
+	nav .menu-item {
+		display: block;
+		padding: 20px;
+	}
 }
 
 *[class^="prlx"] {
@@ -22,7 +131,7 @@ body{
 	width: 100%; min-height: 500px;
 	position: relative;
 	overflow: hidden;
-	padding: 30px;
+	padding: 50px;
 }
 
 .prlx-1 {
@@ -50,11 +159,56 @@ body{
 	padding: 20px;
 }
 
+.top-social i {
+	color: #fff;
+	padding: 5px;
+	opacity: 0.7;
+}
+
 span.projects {
 	background-color: #FFFFFF;
 	padding-right: 10px;
 	padding-left: 10px;
 }
+
+@media only screen and (max-width : 768px) {
+	.top-social {
+		position: absolute;
+		bottom: 175px;
+		left: 100px;
+		padding: 20px;
+	}
+
+	.section-one h2 { 
+		font-size: 45px;
+		color: white;
+		position: absolute;
+		bottom: 100px;
+		left: 50px;
+		padding:10px;
+		background-color: #232323;
+	}
+}
+
+@media only screen and (max-width : 480px) {
+	.top-social {
+		position: absolute;
+		bottom: 225px;
+		left: 100px;
+		padding: 20px;
+	}
+
+	.section-one h2 { 
+		font-size: 45px;
+		color: white;
+		position: absolute;
+		bottom: 100px;
+		left: 50px;
+		padding:10px;
+		background-color: #232323;
+	}
+
+ }
 
 span.skills-category {
 	font-style: italic;
@@ -64,13 +218,13 @@ span.skills-category {
 
 a {
  	text-decoration: none;
- 	color: #593231;
+ 	color: #663333;
  	font-size: 16px;
 }
 
 a:hover {
-	text-decoration: underline;
-	color: #4d464f;
+	text-decoration: none;
+	color: #472323;
 }
 
 p {
