--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,7 @@ span.skills {
 
 .skills {
 	border: 3px solid #000000;
-	width: 300px;
+	width: 200px;
 }
 
 .skills h4 {
@@ -258,6 +258,25 @@ span.skills {
 
 .row {
 	padding: 25px;
+}
+
+.col-md-4 {
+	padding-bottom: 25px;
+}
+
+.info h3 {
+	text-transform: uppercase;
+}
+
+.info {
+	display: none;
+	max-width: 750px;
+}
+
+span.title {
+	font-style: italic;
+	font-size: 16px;
+	color: #734747;
 }
 
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { /* WebKit browsers */
