--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,22 @@
 body{
 	font-family: 'Poppins', sans-serif;
-	font-size: 14px;
+	font-size: 15px;
+}
+
+a {
+	font-style: italic;
+}
+
+.menu-item a, .social a {
+	font-style: normal;
+	text-transform: uppercase;
+	font-weight: 500;
+	letter-spacing: 0.08em;
+}
+
+a, i, .btn, img,
+a:hover, i:hover, .btn:hover, img:hover {
+	transition: .5s all;
 }
 
 .container-fluid {
@@ -25,6 +41,10 @@ nav {
 nav ul {
 	padding: 0;
 	list-style-type: none;
+}
+
+ul.menu {
+	margin-bottom: 0;
 }
 
 nav .menu-item {
@@ -53,7 +73,6 @@ nav .menu-item {
 	background: #fff;
 	line-height: normal;
 	padding: 5px 8px 4px;
-	top: 5%; left: 5%;
 }
 
 .responsive-nav-icon:hover,
@@ -88,9 +107,21 @@ nav .menu-item {
 @media only screen and (max-width: 960px) {
 	.responsive-nav-icon,
 	.responsive-nav-close {
-	    display: block;
-	    position: absolute;
 	    z-index: 1;
+	}
+	
+	.responsive-nav-close {
+		display: absolute;
+	}
+	
+	.responsive-nav-icon {
+		display: block;
+		position: fixed;
+		top: 0;
+		right: 0;
+		width: 100%;
+		border-bottom: 1px solid #000;
+		height: 33px;
 	}
 
 	nav {
@@ -136,10 +167,12 @@ nav .menu-item {
 
 .prlx-1 {
 	background: url('../img/space1.jpeg'); 
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .prlx-2 {
-	background-color: #4d464f;
+	background-color: #281414;
 }
 
 .section-one h2 { 
@@ -162,7 +195,11 @@ nav .menu-item {
 .top-social i {
 	color: #fff;
 	padding: 5px;
-	opacity: 0.7;
+	opacity: 0.5;
+}
+
+.top-social i:hover {
+	opacity: 1;
 }
 
 span.projects {
@@ -171,52 +208,15 @@ span.projects {
 	padding-left: 10px;
 }
 
-@media only screen and (max-width : 768px) {
-	.top-social {
-		position: absolute;
-		bottom: 175px;
-		left: 100px;
-		padding: 20px;
-	}
-
-	.section-one h2 { 
-		font-size: 45px;
-		color: white;
-		position: absolute;
-		bottom: 100px;
-		left: 50px;
-		padding:10px;
-		background-color: #232323;
-	}
-}
-
-@media only screen and (max-width : 480px) {
-	.top-social {
-		position: absolute;
-		bottom: 225px;
-		left: 100px;
-		padding: 20px;
-	}
-
-	.section-one h2 { 
-		font-size: 45px;
-		color: white;
-		position: absolute;
-		bottom: 100px;
-		left: 50px;
-		padding:10px;
-		background-color: #232323;
-	}
-
- }
-
 span.skills-category {
 	font-style: italic;
 	font-size: 16px;
 	color: #734747;
 }
 
-a {
+a,
+a:active,
+a:focus {
  	text-decoration: none;
  	color: #663333;
  	font-size: 16px;
@@ -224,7 +224,7 @@ a {
 
 a:hover {
 	text-decoration: none;
-	color: #472323;
+	color: rgba(71, 35, 35, .5);
 }
 
 p {
@@ -238,22 +238,35 @@ h2 {
 	font-size: 45px;
 }
 
-span.skills {
-	text-transform: uppercase;
-	background-color: #232323;
-	color: #FFFFFF;
-	padding-right: 5px;
-	padding-left: 5px;
-}
-
-.skills {
+.skills-div {
 	border: 3px solid #000000;
-	width: 200px;
+	max-width: 350px;
+	padding: .5em;
 }
 
-.skills h4 {
-	padding-top: 10px;
-	padding-bottom: 20px;
+.skills-div h4 {
+	background-color: #232323;
+	padding: .5em;
+	text-transform: uppercase;
+	color: #FFFFFF;
+	max-width: 180px;
+}
+
+.img-responsive:before {
+	background-color: rgba(255,255,255, .6);
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+}
+
+.filter {
+	filter: grayscale(100%);
+}
+
+.filter:hover {
+	filter: grayscale(0%);
 }
 
 .row {
@@ -279,25 +292,95 @@ span.title {
 	color: #734747;
 }
 
+.form-control {
+	box-shadow: none;
+	border-radius: 0;
+	border: 1px solid #663333;
+	background-color: #fff;
+	font-size: 15px;
+	height: 37px;
+}
+
+.form-control:focus {
+	background-color: rgba(71, 35, 35, 1);
+	box-shadow: none;
+	color: #fff;
+	border-color: transparent;
+}
+
+.submit {
+	border-radius: 0;
+	padding: 13px 15px;
+	border-color: #fff;
+	background-color: #663333;
+	color: #fff;
+	text-transform: uppercase;
+	letter-spacing: 0.08em;
+}
+
+.submit:hover {
+	border-color: #663333;
+	color: #663333;
+	background-color: #fff;
+}
+
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { /* WebKit browsers */
-    color:    #4d4d4d;
+    color:    #d3d3d3;
 }
 input:-moz-placeholder  textarea:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-   color:    #4d4d4d;
+   color:    #d3d3d3;
    opacity:  1;
 }
 input::-moz-placeholder textarea::-moz-placeholder { /* Mozilla Firefox 19+ */
-   color:    #4d4d4d;
+   color:    #d3d3d3;
    opacity:  1;
 }
 input:-ms-input-placeholder { /* Internet Explorer 10+ */
-   color:    #4d4d4d;
+   color:    #d3d3d3;
 }
 
 .site-footer {
 	width: 100%;
-	height: 20px;
-	background-color: #fff;
-	padding: 20px;
-	text-align: right;
+	background-color: #281414;
+	padding: 1em;
+	text-align: center;
+}
+
+.site-footer p {
+	color: #fff;
+	margin-bottom: 0;
+}
+
+.social .fa {
+	width: 25px;
+	height: 25px;
+	margin-right: .5em;
+}
+
+@media only screen and (max-width : 768px) {
+	.top-social {
+		position: absolute;
+		bottom: 225px;
+		left: 72px;
+		padding: 20px;
+	}
+
+	.section-one h2 { 
+		font-size: 45px;
+		color: white;
+		position: absolute;
+		bottom: 100px;
+		left: 50px;
+		padding:10px;
+		background-color: #232323;
+	}
+	
+	.section-one, .section-two,
+	.section-three, .section-four {
+		padding: 10px;
+	}
+	
+	h2 {
+		font-size: 36px;
+	}
 }
