--- a/css/style.css
+++ b/css/style.css
@@ -252,13 +252,33 @@ h2 {
 	max-width: 180px;
 }
 
-.img-responsive:before {
-	background-color: rgba(255,255,255, .6);
-	position: absolute;
-	top: 0;
-	right: 0;
-	left: 0;
-	bottom: 0;
+.work {
+	margin-top: 1em;
+}
+
+.role {
+	margin: 1em 0;
+	text-align: center;
+	font-weight: 600;
+	text-transform: uppercase;
+	letter-spacing: 0.06em;
+}
+
+.work .place {
+	padding-top: 1em;
+	padding-bottom: 1em;
+}
+
+.careers {
+	width: auto;
+	margin: auto;
+	height: 50px;
+	vertical-align: middle;
+	align-items: center;
+}
+
+.careers:hover {
+	filter: blur(2px);
 }
 
 .filter {
